Created HTML structure

--- a/index.html
+++ b/index.html
@@ -33,6 +33,100 @@
     />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Code's Baking</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="#">About me</a>
+            <a class="nav-link" href="#">Cakes</a>
+            <a class="nav-link" href="#">Cookies</a>
+            <a class="nav-link" href="#">Cupcakes</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="header">
+      <h1>Bake it until you make it</h1>
+      <p>
+        Try out delicious recipes that will surprise all of your loved ones!
+        Simple, easy to follow and quick recipes for begginers and experts.
+        <br />
+        <br />
+        I am Code and this is a compilation of my most liked recipes. I hope you
+        enjoy them!
+      </p>
+      <a href="#" class="button button-about">Learn more</a>
+    </div>
+    <div class="container">
+      <h2>What do you want to bake?</h2>
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+      </div>
+      <div class="row">
+        <dev class="col-4"><a href="#">Cakes</a></dev>
+        <dev class="col-4"><a href="#">Cookies</a></dev>
+        <dev class="col-4"><a href="#">Cupcakes</a></dev>
+      </div>
+    </div>
+    <div class="section">
+      <h2>Want to get in touch?</h2>
+      <div class="row">
+        <div class="col-6">
+          <p>
+            Doubts or questions, business inquiries and everything else is
+            welcome!
+            <br />
+            Don’t hesitate to reach out.
+          </p>
+        </div>
+        <div class="col-6">
+          <a href="#" class="button button-contact">Contact me</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer container">
+      <h3>Code's Baking</h3>
+      <div class="row">
+        <div class="col-4">
+          <h4>Socials</h4>
+          <div class="row">
+            <div class="col-4"><i class="fab fa-instagram"></i></div>
+            <div class="col-4"><i class="fab fa-facebook-f"></i></div>
+            <div class="col-4"><i class="fab fa-twitter"></i></div>
+          </div>
+          <p>
+            <a href="#">Open-source</a> code by
+            <span class="signature">Helena Codesal</span>
+          </p>
+        </div>
+        <div class="col-4">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+            diam felis, volutpat ac ante semper, rutrum mollis erat.
+          </p>
+        </div>
+        <div class="col-4">
+          <h4>Site map</h4>
+          <a href="#">About me</a>
+          <a href="#">Cakes</a>
+          <a href="#">Cookies</a>
+          <a href="#">Cupcakes</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
