--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         </div>
       </div>
     </div>
-    <div class="m-top">
+    <div class="section m-top">
       <div class="container">
-        <h2 class="icons-header">What do you want to bake?</h2>
+        <h2 class="icons-header m-top">What do you want to bake?</h2>
         <div class="row margin-row d-flex justify-content-around">
           <div class="col-md-4 icons d-flex">
             <img
@@ -124,6 +124,19 @@
           </div>
         </div>
       </div>
+      <div class="custom-shape-divider-top-1643665533">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
     </div>
     <div class="container contact m-top">
       <h2 class="contact-header">Want to get in touch?</h2>
@@ -137,7 +150,7 @@
             Don’t hesitate to reach out.
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 d-flex justify-content-end align-items-end">
           <a href="#" class="button button-contact align-bottom">Contact me</a>
         </div>
       </div>
