added wave separation in contact section and fixed design issues

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse d-flex justify-content-end"
+          class="collapse navbar-collapse justify-content-end"
           id="navbarNavAltMarkup"
         >
-          <div class="navbar-nav">
+          <div class="navbar-nav text-start">
             <a class="nav-link" href="#">About me</a>
             <a class="nav-link" href="#">Cakes</a>
             <a class="nav-link" href="#">Cookies</a>
@@ -60,19 +60,22 @@
         </div>
       </div>
     </nav>
-    <div class="header p-top">
+    <div class="header p-top section-divide">
       <div class="container">
         <div class="row d-flex">
           <div class="col-md-6">
             <h1>Bake it until you make it</h1>
             <p>
               Try out delicious recipes that will surprise all of your loved
-              ones! Simple, easy to follow and quick recipes for begginers and
+              ones!
+              <br />
+              Simple, easy to follow and quick recipes for begginers and
               experts.
               <br />
               <br />
-              I am Code and this is a compilation of my most liked recipes. I
-              hope you enjoy them!
+              I am Code and this is a compilation of my most liked recipes.
+              <br />
+              I hope you enjoy them!
             </p>
             <a href="#" class="button button-about">Learn more</a>
           </div>
@@ -86,9 +89,9 @@
         </div>
       </div>
     </div>
-    <div class="section m-top">
+    <div class="section section-divide m-top">
       <div class="container">
-        <h2 class="icons-header m-top">What do you want to bake?</h2>
+        <h2 class="icons-header">What do you want to bake?</h2>
         <div class="row margin-row d-flex justify-content-around">
           <div class="col-md-4 icons d-flex">
             <img
@@ -124,7 +127,7 @@
           </div>
         </div>
       </div>
-      <div class="custom-shape-divider-top-1643665533">
+      <div class="wave">
         <svg
           data-name="Layer 1"
           xmlns="http://www.w3.org/2000/svg"
@@ -138,24 +141,41 @@
         </svg>
       </div>
     </div>
-    <div class="container contact m-top">
-      <h2 class="contact-header">Want to get in touch?</h2>
-      <div class="row margin-row">
-        <div class="col-md-6">
-          <p>
-            Doubts or questions, business inquiries and everything else is
-            welcome!
-            <br />
-            <br />
-            Don’t hesitate to reach out.
-          </p>
-        </div>
-        <div class="col-md-6 d-flex justify-content-end align-items-end">
-          <a href="#" class="button button-contact align-bottom">Contact me</a>
+    <div class="contact p-top p-bottom position-relative section-divide">
+      <div class="wave-contact">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
+      <div class="container">
+        <h2 class="contact-header">Want to get in touch?</h2>
+        <div class="row margin-row">
+          <div class="col-md-6">
+            <p>
+              Doubts or questions, business inquiries and everything else is
+              welcome!
+              <br />
+              <br />
+              Don’t hesitate to reach out.
+            </p>
+          </div>
+          <div class="col-md-6 d-flex justify-content-end align-items-end">
+            <a href="#" class="button button-contact align-bottom"
+              >Contact me</a
+            >
+          </div>
         </div>
       </div>
     </div>
-    <div class="footer m-top">
+    <div class="footer section-divide">
       <h3 class="text-center p-4">Code's Baking</h3>
       <div class="container">
         <div class="row">
