--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     </nav>
     <div class="header p-top section-divide">
       <div class="container">
-        <div class="row d-flex">
-          <div class="col-md-6">
+        <div class="row d-flex justify-content-lg-center">
+          <div class="header-section col-lg-6 col-md-12">
             <h1>Bake it until you make it</h1>
-            <p>
+            <p class="d-none d-lg-block">
               Try out delicious recipes that will surprise all of your loved
               ones!
               <br />
@@ -77,13 +77,17 @@
               <br />
               I hope you enjoy them!
             </p>
+            <p class="d-block d-lg-none text-center">
+              I am Code and this is my compilation of simple, easy to follow and
+              quick recipes that will surprise all of your loved ones!
+            </p>
             <a href="#" class="button button-about">Learn more</a>
           </div>
           <div class="col-md-6 header-image-container">
             <img
               src="/images/portada.svg"
               alt="Code's Baking, recipies for pastries, cakes, cookies and cupcakes"
-              class="header-image img-fluid"
+              class="header-image img-fluid d-none d-lg-block"
             />
           </div>
         </div>
@@ -93,37 +97,41 @@
       <div class="container">
         <h2 class="icons-header">What do you want to bake?</h2>
         <div class="row margin-row d-flex justify-content-around">
-          <div class="col-md-4 icons d-flex">
-            <img
-              src="/images/cake.svg"
-              alt="Cake recipes by Code's Baking"
-              class="icon-image"
-            />
+          <div class="col-md-4 wrapper d-flex flex-column align-items-center">
+            <a href="#" class="icons d-flex align-items-center">
+              <img
+                src="/images/cake.svg"
+                alt="Cake recipes by Code's Baking"
+                class="icon-image"
+              />
+            </a>
+            <div class="link-recipes">
+              <a href="#" class="link-recipes">Cakes</a>
+            </div>
           </div>
-          <div class="col-md-4 icons d-flex">
-            <img
-              src="/images/cookies.svg"
-              alt="Cookies recipes by Code's Baking"
-              class="icon-image"
-            />
+          <div class="col-md-4 wrapper d-flex flex-column align-items-center">
+            <a href="#" class="icons d-flex align-items-center">
+              <img
+                src="/images/cookies.svg"
+                alt="Cookies recipes by Code's Baking"
+                class="icon-image"
+              />
+            </a>
+            <div class="link-recipes">
+              <a href="#" class="link-recipes">Cookies</a>
+            </div>
           </div>
-          <div class="col-md-4 icons d-flex">
-            <img
-              src="/images/cupcake.svg"
-              alt="Cupcake recipes by Code's Baking"
-              class="icon-image"
-            />
-          </div>
-        </div>
-        <div class="row d-flex justify-content-around">
-          <div class="col-md-4 link-recipes">
-            <a href="#" class="link-recipes">Cakes</a>
-          </div>
-          <div class="col-md-4 link-recipes">
-            <a href="#" class="link-recipes">Cookies</a>
-          </div>
-          <div class="col-md-4 link-recipes">
-            <a href="#" class="link-recipes">Cupcakes</a>
+          <div class="col-md-4 wrapper d-flex flex-column align-items-center">
+            <a href="#" class="icons d-flex align-items-center">
+              <img
+                src="/images/cupcake.svg"
+                alt="Cupcake recipes by Code's Baking"
+                class="icon-image"
+              />
+            </a>
+            <div class="link-recipes">
+              <a href="#" class="link-recipes">Cupcakes</a>
+            </div>
           </div>
         </div>
       </div>
@@ -158,19 +166,18 @@
       <div class="container">
         <h2 class="contact-header">Want to get in touch?</h2>
         <div class="row margin-row">
-          <div class="col-md-6">
-            <p>
-              Doubts or questions, business inquiries and everything else is
-              welcome!
+          <div class="col-lg-6 col-md-12">
+            <p class="contact-text">
+              Doubts or questions, business inquiries
+              <br />
+              and everything else is welcome!
               <br />
               <br />
               Don’t hesitate to reach out.
             </p>
           </div>
-          <div class="col-md-6 d-flex justify-content-end align-items-end">
-            <a href="#" class="button button-contact align-bottom"
-              >Contact me</a
-            >
+          <div class="contact-button-div col-lg-6 col-md-12">
+            <a href="#" class="button button-contact">Contact me</a>
           </div>
         </div>
       </div>
@@ -179,14 +186,14 @@
       <h3 class="text-center p-4">Code's Baking</h3>
       <div class="container">
         <div class="row">
-          <div class="col-md-4 socials">
+          <div class="col-lg-4 col-md-12 socials">
             <h4>Socials</h4>
-            <div class="d-flex justify-content-around social-icons">
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-twitter"></i>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>
+            <p class="d-none d-lg-block">
               <a href="https://github.com/itscode29/codes-baking">
                 Open-source</a
               >
@@ -199,13 +206,29 @@
               </a>
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 col-md-12">
             <p class="snippet">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-              diam felis, volutpat ac ante semper, rutrum mollis erat.
+              Try out delicious recipes that will surprise all of your loved
+              ones!
+              <br />
+              Simple, easy to follow and quick recipes for begginers and
+              experts.
+            </p>
+            <p class="d-block d-lg-none text-center socials margin-small">
+              <a href="https://github.com/itscode29/codes-baking">
+                Open-source</a
+              >
+              code by
+              <a
+                href="https://www.linkedin.com/in/helena-codesal/"
+                class="signature"
+              >
+                Helena Codesal
+              </a>
             </p>
           </div>
-          <div class="col-md-4 site-map">
+
+          <div class="col-md-4 site-map d-none d-lg-block">
             <h4>Site map</h4>
             <ul>
               <li>
