Added responsive-font sizing
Navbar in mobile is not working well

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               I am Code and this is my compilation of simple, easy to follow and
               quick recipes that will surprise all of your loved ones!
             </p>
-            <a href="#" class="button button-about">Learn more</a>
+            <a href="#" class="button button-about">About me</a>
           </div>
           <div class="col-md-6 header-image-container">
             <img
@@ -97,7 +97,7 @@
       <div class="container">
         <h2 class="icons-header">What do you want to bake?</h2>
         <div class="row margin-row d-flex justify-content-around">
-          <div class="col-md-4 wrapper d-flex flex-column align-items-center">
+          <div class="col-md-4 wrapper">
             <a href="#" class="icons d-flex align-items-center">
               <img
                 src="/images/cake.svg"
@@ -109,7 +109,7 @@
               <a href="#" class="link-recipes">Cakes</a>
             </div>
           </div>
-          <div class="col-md-4 wrapper d-flex flex-column align-items-center">
+          <div class="col-md-4 wrapper">
             <a href="#" class="icons d-flex align-items-center">
               <img
                 src="/images/cookies.svg"
@@ -121,7 +121,7 @@
               <a href="#" class="link-recipes">Cookies</a>
             </div>
           </div>
-          <div class="col-md-4 wrapper d-flex flex-column align-items-center">
+          <div class="col-md-4 wrapper">
             <a href="#" class="icons d-flex align-items-center">
               <img
                 src="/images/cupcake.svg"
