Changed mobile design

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
     </nav>
-    <div class="header p-top section-divide">
+    <div class="header p-hero section-divide position-relative">
       <div class="container">
         <div class="row d-flex justify-content-lg-center">
           <div class="header-section col-lg-6 col-md-12">
@@ -92,50 +92,69 @@
           </div>
         </div>
       </div>
+      <div class="wave-mobile d-lg-none text-center">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
     </div>
     <div class="section section-divide m-top">
       <div class="container">
         <h2 class="icons-header">What do you want to bake?</h2>
         <div class="row margin-row d-flex justify-content-around">
-          <div class="col-md-4 wrapper">
-            <a href="#" class="icons d-flex align-items-center">
-              <img
-                src="/images/cake.svg"
-                alt="Cake recipes by Code's Baking"
-                class="icon-image"
-              />
-            </a>
-            <div class="link-recipes">
-              <a href="#" class="link-recipes">Cakes</a>
+          <div class="col-md-4">
+            <div class="wrapper">
+              <a href="#" class="icons d-flex align-items-center">
+                <img
+                  src="/images/cake.svg"
+                  alt="Cake recipes by Code's Baking"
+                  class="icon-image"
+                />
+              </a>
+              <div class="link-recipes">
+                <a href="#" class="link-recipes">Cakes</a>
+              </div>
             </div>
           </div>
-          <div class="col-md-4 wrapper">
-            <a href="#" class="icons d-flex align-items-center">
-              <img
-                src="/images/cookies.svg"
-                alt="Cookies recipes by Code's Baking"
-                class="icon-image"
-              />
-            </a>
-            <div class="link-recipes">
-              <a href="#" class="link-recipes">Cookies</a>
+          <div class="col-md-4">
+            <div class="wrapper">
+              <a href="#" class="icons d-flex align-items-center">
+                <img
+                  src="/images/cookies.svg"
+                  alt="Cookies recipes by Code's Baking"
+                  class="icon-image"
+                />
+              </a>
+              <div class="link-recipes">
+                <a href="#" class="link-recipes">Cookies</a>
+              </div>
             </div>
           </div>
-          <div class="col-md-4 wrapper">
-            <a href="#" class="icons d-flex align-items-center">
-              <img
-                src="/images/cupcake.svg"
-                alt="Cupcake recipes by Code's Baking"
-                class="icon-image"
-              />
-            </a>
-            <div class="link-recipes">
-              <a href="#" class="link-recipes">Cupcakes</a>
+          <div class="col-md-4">
+            <div class="wrapper">
+              <a href="#" class="icons d-flex align-items-center">
+                <img
+                  src="/images/cupcake.svg"
+                  alt="Cupcake recipes by Code's Baking"
+                  class="icon-image"
+                />
+              </a>
+              <div class="link-recipes">
+                <a href="#" class="link-recipes">Cupcakes</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="wave">
+      <div class="wave d-none d-lg-block">
         <svg
           data-name="Layer 1"
           xmlns="http://www.w3.org/2000/svg"
@@ -150,7 +169,7 @@
       </div>
     </div>
     <div class="contact p-top p-bottom position-relative section-divide">
-      <div class="wave-contact">
+      <div class="wave-contact d-none d-lg-block">
         <svg
           data-name="Layer 1"
           xmlns="http://www.w3.org/2000/svg"
@@ -182,7 +201,7 @@
         </div>
       </div>
     </div>
-    <div class="footer section-divide">
+    <div class="footer section-divide section-divide-mobile">
       <h3 class="text-center p-4">Code's Baking</h3>
       <div class="container">
         <div class="row">
