--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
               I hope you enjoy them!
             </p>
             <p class="d-block d-lg-none text-center">
-              I am Code and this is my compilation of simple, easy to follow and
-              quick recipes that will surprise all of your loved ones!
+              I am Code and this is my compilation of simple,
+              <br />
+              easy to follow and quick recipes
+              <br />
+              that will surprise all of your loved ones!
             </p>
             <a href="#" class="button button-about">About me</a>
           </div>
