--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav text-start">
-            <a class="nav-link" href="#">About me</a>
-            <a class="nav-link" href="#">Cakes</a>
-            <a class="nav-link" href="#">Cookies</a>
-            <a class="nav-link" href="#">Cupcakes</a>
+            <a class="nav-link" href="/about.html">About me</a>
+            <a class="nav-link" href="/cakes.html">Cakes</a>
+            <a class="nav-link" href="/cookies.html">Cookies</a>
+            <a class="nav-link" href="/cupcakes.html">Cupcakes</a>
           </div>
         </div>
       </div>
@@ -254,16 +254,16 @@
             <h4>Site map</h4>
             <ul>
               <li>
-                <a href="#">About me</a>
+                <a href="/about.html">About me</a>
               </li>
               <li>
-                <a href="#">Cakes</a>
+                <a href="/cakes.html">Cakes</a>
               </li>
               <li>
-                <a href="#">Cookies</a>
+                <a href="/cookies.html">Cookies</a>
               </li>
               <li>
-                <a href="#">Cupcakes</a>
+                <a href="/cupcakes.html">Cupcakes</a>
               </li>
             </ul>
           </div>
