About page styling

--- a/about.html
+++ b/about.html
@@ -60,83 +60,106 @@
         </div>
       </div>
     </nav>
-    <div class="container m-top">
-      <div class="row">
-        <div class="col-6">
-          <h1>Hi! I'm Helena Codesal</h1>
-          <h2 class="margin-small">
-            Part-time baker and full-time front-end developer from Barcelona
-          </h2>
-          <p>
-            I've been fascinated by baking since I was very young. I made cakes,
-            cupcakes and cookies for all birthdays and parties. Now, having
-            learned how to code, I want to show you my favourite recipes, so you
-            can enjoy them too!
-          </p>
-          <a href="/cakes.html" class="button button-contact"
-            >Check out my favourite cakes!</a
-          >
-        </div>
-        <div class="col-6">
-          <img
-            src="/images/Helena_Codesal.JPG"
-            class="img-fluid"
-            alt="This is me, Helena Codesal"
-          />
+    <div class="about-header p-hero section-divide">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-7 col-md-12 text-about-page">
+            <h1>Hi! I'm Helena Codesal</h1>
+            <h2 class="margin-small">
+              Part-time baker and full-time front-end developer from Barcelona
+            </h2>
+            <p>
+              I've been fascinated by baking since I was very young. I made
+              cakes, cupcakes and cookies for all birthdays and parties. Now,
+              having learned how to code, I want to show you my favourite
+              recipes, so you can enjoy them too!
+              <br />
+              <br />
+              If you wish to order a custom cake, pie, box of cupcakes or
+              cookies, do not hesitate to contact me!
+            </p>
+            <a
+              href="mailto:hlena.codesal@gmail.com"
+              class="button button-contact"
+              >Contact me</a
+            >
+          </div>
+          <div class="col-lg-5">
+            <img
+              src="/images/Helena_Codesal.JPG"
+              class="img-fluid about-image d-none d-lg-block"
+              alt="This is me, Helena Codesal"
+            />
+          </div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <h3>My favourite recipes</h3>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card">
-            <img
-              src="/images/lemon-tart.jpg"
-              class="card-img-top"
-              alt="lemon tart"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Lemon tart</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
+    <div class="recipes position-relative">
+      <div class="wave-about">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+          ></path>
+        </svg>
+      </div>
+      <div class="container">
+        <h2 class="p-top">My favourite recipes</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4 margin-small">
+          <div class="col">
+            <div class="card">
+              <img
+                src="/images/lemon-tart.jpg"
+                class="card-img-top"
+                alt="lemon tart"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Lemon tart</h5>
+                <p class="card-text">
+                  The tastiest lemon tart you will ever try! The original recipe
+                  is from Claire Saffitz's Desert Person cookbook.
+                </p>
+                <a href="/cakes.html" class="card-link">See the recipe</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="/images/nutella-cupcakes.jpg"
-              class="card-img-top"
-              alt="Nutella cupcakes"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Nutella cupcakes</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
+          <div class="col">
+            <div class="card">
+              <img
+                src="/images/nutella-cupcakes.jpg"
+                class="card-img-top"
+                alt="Nutella cupcakes"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Nutella cupcakes</h5>
+                <p class="card-text">
+                  The favurite among my friends, rich, super tastful and packed
+                  with Nutella top to bottom.
+                </p>
+                <a href="/cupcakes.html" class="card-link">See the recipe</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="/images/chocolate-cookies.jpg"
-              class="card-img-top"
-              alt="Chocolate chip cookies"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Chocolate chip cookies</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
+          <div class="col">
+            <div class="card">
+              <img
+                src="/images/chocolate-cookies.jpg"
+                class="card-img-top"
+                alt="Chocolate chip cookies"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Chocolate chip cookies</h5>
+                <p class="card-text">
+                  My go-to cookie recipe! With a rich brown butter base and lots
+                  of chocolate chunks!.
+                </p>
+                <a href="/cookies.html" class="card-link">See the recipe</a>
+              </div>
             </div>
           </div>
         </div>
