Fixed empty homepage links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <br />
               that will surprise all of your loved ones!
             </p>
-            <a href="#" class="button button-about">About me</a>
+            <a href="/about.html" class="button button-about">About me</a>
           </div>
           <div class="col-md-6 header-image-container">
             <img
@@ -199,7 +199,11 @@
             </p>
           </div>
           <div class="contact-button-div col-lg-6 col-md-12">
-            <a href="#" class="button button-contact">Contact me</a>
+            <a
+              href="mailto:helena.codesal@gmail.com"
+              class="button button-contact"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
