Styled recipes pages

--- a/cakes.html
+++ b/cakes.html
@@ -60,12 +60,21 @@
         </div>
       </div>
     </nav>
-    <h1 class="m-top">Cake recipes</h1>
-    <div class="container recipe">
-      <img src="/images/lemon-tart.jpg" alt="Lemon tart" class="img-fluid" />
+    <h1 class="m-top text-center">Cake recipes</h1>
+    <div class="container recipe margin-row">
+      <img
+        src="/images/cakes-recipe.jpg"
+        alt="Lemon tart"
+        class="img-fluid d-none d-lg-block section-divide"
+      />
+      <img
+        src="/images/lemon-tart.jpg"
+        alt="Lemon tart"
+        class="img-fluid d-block d-lg-none section-divide-mobile"
+      />
       <h2>Lemon tart</h2>
       <div class="row">
-        <div class="col-5">
+        <div class="col-lg-5 col-md-12">
           <h4>Ingredients</h4>
           <h5>For the lemon curd</h5>
           <ul>
@@ -89,7 +98,7 @@
             <li>4 tablespoons of water</li>
           </ul>
         </div>
-        <div class="col-7">
+        <div class="col-lg-7 col-md-12">
           <h4>Preparation</h4>
           <p>
             You can prepare the lemon curd in advance, since it has to cool
@@ -109,11 +118,15 @@
             curd with plastic wrap, let the plastic touch the cream directly to
             prevent the top from drying out.
           </p>
-          <a href="#" class="button">See the rest of the recipe</a>
+          <br />
+          <br />
+          <a href="#" class="button button-recipe"
+            >See the rest of the recipe</a
+          >
         </div>
       </div>
     </div>
-    <div class="footer section-divide section-divide-mobile">
+    <div class="footer m-top section-divide section-divide-mobile">
       <h3 class="text-center p-4">Code's Baking</h3>
       <div class="container">
         <div class="row">
