--- a/cookies.html
+++ b/cookies.html
@@ -60,16 +60,21 @@
         </div>
       </div>
     </nav>
-    <h1 class="m-top">Cookie recipes</h1>
-    <div class="container recipe">
+    <h1 class="m-top text-center">Cookie recipes</h1>
+    <div class="container recipe margin-row">
+      <img
+        src="/images/cookies-recipe.jpg"
+        alt="Chocolate chip cookies"
+        class="img-fluid d-none d-lg-block section-divide"
+      />
       <img
         src="/images/chocolate-cookies.jpg"
         alt="Chocolate chip cookies"
-        class="img-fluid"
+        class="img-fluid d-block d-lg-none section-divide-mobile"
       />
       <h2>Chocolate chip cookies</h2>
       <div class="row">
-        <div class="col-5">
+        <div class="col-lg-5 col-md-12">
           <h4>Ingredients</h4>
           <ul>
             <li>1 cup unsalted butter</li>
@@ -86,7 +91,7 @@
             <li>flaky sea salt</li>
           </ul>
         </div>
-        <div class="col-7">
+        <div class="col-lg-7 col-md-12">
           <h4>Preparation</h4>
           <p>
             Add the butter to a medium nonstick saucepan over medium-high heat.
@@ -102,11 +107,14 @@
             until glossy and smooth. Add the flour and fold with a rubber
             spatula to incorporate until the dough has no visible flour streaks.
           </p>
-          <a href="#" class="button">See the rest of the recipe</a>
+          <br /><br />
+          <a href="#" class="button button-recipe"
+            >See the rest of the recipe</a
+          >
         </div>
       </div>
     </div>
-    <div class="footer section-divide section-divide-mobile">
+    <div class="footer m-top section-divide section-divide-mobile">
       <h3 class="text-center p-4">Code's Baking</h3>
       <div class="container">
         <div class="row">
