--- a/cupcakes.html
+++ b/cupcakes.html
@@ -60,16 +60,21 @@
         </div>
       </div>
     </nav>
-    <h1 class="m-top">Cupcake recipes</h1>
-    <div class="container recipe">
+    <h1 class="m-top text-center">Cupcake recipes</h1>
+    <div class="container recipe margin-row">
+      <img
+        src="/images/cupcakes-recipe.jpg"
+        alt="Nutella cupcakes"
+        class="img-fluid d-none d-lg-block section-divide"
+      />
       <img
         src="/images/nutella-cupcakes.jpg"
         alt="Nutella cupcakes"
-        class="img-fluid"
+        class="img-fluid d-block d-lg-none section-divide-mobile"
       />
       <h2>Nutella Cupcakes</h2>
       <div class="row">
-        <div class="col-5">
+        <div class="col-lg-5 col-md-12">
           <h4>Ingredients</h4>
           <h5>For the cupcakes</h5>
           <ul>
@@ -90,7 +95,7 @@
             <li>4 tablespoons Nutella</li>
           </ul>
         </div>
-        <div class="col-7">
+        <div class="col-lg-7 col-md-12">
           <h4>Preparation</h4>
           <h5>Cupcakes</h5>
           <p>
@@ -103,11 +108,14 @@
             Finally add the Nutella. Now spread the batter in the capsules and
             bake for approximately 20-23 minutes at 180ºC.
           </p>
-          <a href="#" class="button">See the rest of the recipe</a>
+          <br /><br />
+          <a href="#" class="button button-recipe"
+            >See the rest of the recipe</a
+          >
         </div>
       </div>
     </div>
-    <div class="footer section-divide section-divide-mobile">
+    <div class="footer m-top section-divide section-divide-mobile">
       <h3 class="text-center p-4">Code's Baking</h3>
       <div class="container">
         <div class="row">
