fixed buttons in small screens

--- a/cakes.html
+++ b/cakes.html
@@ -120,9 +120,9 @@
           </p>
           <br />
           <br />
-          <a href="#" class="button button-recipe"
-            >See the rest of the recipe</a
-          >
+          <div class="recipe-button-div">
+            <a href="#" class="button button-recipe">Read more</a>
+          </div>
         </div>
       </div>
     </div>
