--- a/cupcakes.html
+++ b/cupcakes.html
@@ -109,9 +109,9 @@
             bake for approximately 20-23 minutes at 180ºC.
           </p>
           <br /><br />
-          <a href="#" class="button button-recipe"
-            >See the rest of the recipe</a
-          >
+          <div class="recipe-button-div">
+            <a href="#" class="button button-recipe">Read more</a>
+          </div>
         </div>
       </div>
     </div>
