--- a/cookies.html
+++ b/cookies.html
@@ -108,9 +108,9 @@
             spatula to incorporate until the dough has no visible flour streaks.
           </p>
           <br /><br />
-          <a href="#" class="button button-recipe"
-            >See the rest of the recipe</a
-          >
+          <div class="recipe-button-div">
+            <a href="#" class="button button-recipe">Read more</a>
+          </div>
         </div>
       </div>
     </div>
